TheKabal (23 February 2013)
--------------------------------------
All instances of include 'error.php', should reference the path

TheMightyDude (14 February 2013)
--------------------------------------
Fixed Exploit in IGB Loan System.

TheMightyDude (10 February 2013)
--------------------------------------
Fixed a bug where a player was on their planet when it was attacked, resulting in their planets not being set to unowned.
A Database error occurred in includes/db_kill_player.php on line 42 (called from: planet.php: Table 'bnt_planets' was not locked with LOCK TABLES
A Database error occurred in includes/db_kill_player.php on line 60 (called from: planet.php: Table 'bnt_planets' was not locked with LOCK TABLES
A Database error occurred in includes/db_kill_player.php on line 73 (called from: planet.php: Table 'bnt_sector_defence' was not locked with LOCK TABLES
A Database error occurred in includes/db_kill_player.php on line 91 (called from: planet.php: Table 'bnt_news' was not locked with LOCK TABLES

TheKabal (10 February 2013)
--------------------------------------
Re-ordered the database tables in schema (up until planets) to be closer to alphabetical order

TheKabal (5 February 2013)
--------------------------------------
num_armor has been replaced by \bnt\CalcLevels::Armor, which is auto-loaded from the vendor/bnt directory.

TheMightyDude (05 February 2013)
--------------------------------------
Ok, fixed everything with sub-projects that are installed via Composer, everything _should_ work now.
Test SVN auto updates. (IGNORE)

TheMightyDude (02 February 2013)
--------------------------------------
Add Smarty v3.1.13 into the code base.

TheKabal (2 February 2013)
--------------------------------------
num_shields has been replaced by \bnt\CalcLevels::Shields, which is auto-loaded from the vendor/bnt directory.
num_holds has been replaced by \bnt\CalcLevels::Holds, which is auto-loaded from the vendor/bnt directory.