@@ -21,9 +21,9 @@ return array(
     'ADODB2_sapdb' => $baseDir . '/vendor/adodb/adodb-php/datadict/datadict-sapdb.inc.php',
     'ADODB2_sqlite' => $baseDir . '/vendor/adodb/adodb-php/datadict/datadict-sqlite.inc.php',
     'ADODB2_sybase' => $baseDir . '/vendor/adodb/adodb-php/datadict/datadict-sybase.inc.php',
-    'ADODB_Active_DB' => $baseDir . '/vendor/adodb/adodb-php/adodb-active-record.inc.php',
-    'ADODB_Active_Record' => $baseDir . '/vendor/adodb/adodb-php/adodb-active-record.inc.php',
-    'ADODB_Active_Table' => $baseDir . '/vendor/adodb/adodb-php/adodb-active-record.inc.php',
+    'ADODB_Active_DB' => $baseDir . '/vendor/adodb/adodb-php/adodb-active-recordx.inc.php',
+    'ADODB_Active_Record' => $baseDir . '/vendor/adodb/adodb-php/adodb-active-recordx.inc.php',
+    'ADODB_Active_Table' => $baseDir . '/vendor/adodb/adodb-php/adodb-active-recordx.inc.php',
     'ADODB_BASE_RS' => $baseDir . '/vendor/adodb/adodb-php/adodb-php4.inc.php',
     'ADODB_Cache_File' => $baseDir . '/vendor/adodb/adodb-php/adodb.inc.php',
     'ADODB_Cache_MemCache' => $baseDir . '/vendor/adodb/adodb-php/adodb-memcache.lib.inc.php',
@@ -42,7 +42,7 @@ return array(
     'ADODB_SAPDB' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-sapdb.inc.php',
     'ADODB_Session' => $baseDir . '/vendor/adodb/adodb-php/session/adodb-session2.php',
     'ADODB_access' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-access.inc.php',
-    'ADODB_ado' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado.inc.php',
+    'ADODB_ado' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado5.inc.php',
     'ADODB_ado_access' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado_access.inc.php',
     'ADODB_ado_mssql' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado_mssql.inc.php',
     'ADODB_ads' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ads.inc.php',
@@ -96,7 +96,7 @@ return array(
     'ADOPDOStatement' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-pdo.inc.php',
     'ADORecordSet' => $baseDir . '/vendor/adodb/adodb-php/adodb.inc.php',
     'ADORecordSet_access' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-access.inc.php',
-    'ADORecordSet_ado' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado.inc.php',
+    'ADORecordSet_ado' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado5.inc.php',
     'ADORecordSet_ado_access' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado_access.inc.php',
     'ADORecordSet_ado_mssql' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ado_mssql.inc.php',
     'ADORecordSet_ads' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-ads.inc.php',
@@ -157,13 +157,13 @@ return array(
     'ADORecordset_sybase' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-sybase.inc.php',
     'Artist' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-relationsx.php',
     'Auth_Container_ADOdb' => $baseDir . '/vendor/adodb/adodb-php/pear/Auth/Container/ADOdb.php',
-    'Child' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-record.php',
+    'Child' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-relationsx.php',
     'City' => $baseDir . '/vendor/adodb/adodb-php/tests/test-php5.php',
     'DB' => $baseDir . '/vendor/adodb/adodb-php/adodb-pear.inc.php',
     'Kid' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-relationsx.php',
     'MD5Crypt' => $baseDir . '/vendor/adodb/adodb-php/session/old/crypt.inc.php',
     'PasswordHash' => $baseDir . '/vendor/phpass/PasswordHash.php',
-    'Person' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-record.php',
+    'Person' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-relationsx.php',
     'Plugin' => $baseDir . '/vendor/bnt/pluginsystem/plugin_system.php',
     'PluginSystem' => $baseDir . '/vendor/bnt/pluginsystem/plugin_system.php',
     'Rugrat' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-relationsx.php',
@@ -173,15 +173,15 @@ return array(
     'SmartyCompilerException' => $baseDir . '/vendor/smarty/smarty/distribution/libs/Smarty.class.php',
     'SmartyException' => $baseDir . '/vendor/smarty/smarty/distribution/libs/Smarty.class.php',
     'Song' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-relationsx.php',
-    'adoSchema' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema.inc.php',
+    'adoSchema' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema03.inc.php',
     'adodb_perf' => $baseDir . '/vendor/adodb/adodb-php/adodb-perf.inc.php',
     'adorecordset_sybase_ase' => $baseDir . '/vendor/adodb/adodb-php/drivers/adodb-sybase_ase.inc.php',
     'child' => $baseDir . '/vendor/adodb/adodb-php/tests/test-active-relations.php',
-    'dbData' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema.inc.php',
-    'dbIndex' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema.inc.php',
-    'dbObject' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema.inc.php',
-    'dbQuerySet' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema.inc.php',
-    'dbTable' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema.inc.php',
+    'dbData' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema03.inc.php',
+    'dbIndex' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema03.inc.php',
+    'dbObject' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema03.inc.php',
+    'dbQuerySet' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema03.inc.php',
+    'dbTable' => $baseDir . '/vendor/adodb/adodb-php/adodb-xmlschema03.inc.php',
     'perf_db2' => $baseDir . '/vendor/adodb/adodb-php/perf/perf-db2.inc.php',
     'perf_informix' => $baseDir . '/vendor/adodb/adodb-php/perf/perf-informix.inc.php',
     'perf_mssql' => $baseDir . '/vendor/adodb/adodb-php/perf/perf-mssql.inc.php',
