@@ -2,7 +2,7 @@
 
 // autoload_real.php generated by Composer
 
-class ComposerAutoloaderInit6fb0ce3b886fbe0070f8661312fefac4
+class ComposerAutoloaderInitcb505e47d508b3eef71f860061dbab5e
 {
     private static $loader;
 
@@ -19,9 +19,9 @@ class ComposerAutoloaderInit6fb0ce3b886fbe0070f8661312fefac4
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInit6fb0ce3b886fbe0070f8661312fefac4', 'loadClassLoader'));
+        spl_autoload_register(array('ComposerAutoloaderInitcb505e47d508b3eef71f860061dbab5e', 'loadClassLoader'));
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInit6fb0ce3b886fbe0070f8661312fefac4', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInitcb505e47d508b3eef71f860061dbab5e', 'loadClassLoader'));
 
         $vendorDir = dirname(__DIR__);
         $baseDir = dirname($vendorDir);
@@ -38,8 +38,8 @@ class ComposerAutoloaderInit6fb0ce3b886fbe0070f8661312fefac4
 
         $loader->register(true);
 
-        require $vendorDir . '/ezyang/htmlpurifier/library/HTMLPurifier.composer.php';
         require $vendorDir . '/adodb/adodb-php/adodb.inc.php';
+        require $vendorDir . '/ezyang/htmlpurifier/library/HTMLPurifier.composer.php';
 
         return $loader;
     }
